--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   carousel_slider: ^4.0.0
   shared_preferences: ^2.0.13
-
+  simple_animations: ^1.3.3
+  flutter_dropdown_alert: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,5 +55,6 @@ flutter:
       - assets/img/
       - assets/slider/
       - assets/svg/
+      - assets/images/
 
  
