--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   shared_preferences: ^2.0.13
   simple_animations: ^1.3.3
   flutter_dropdown_alert: ^1.0.3
+  # sffffff
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  google_sign_in: ^5.3.2
+  firebase_messaging: ^11.4.1
+  flutter_local_notifications: ^9.5.3
+  provider: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
