--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   google_sign_in: ^5.3.2
   firebase_messaging: ^11.4.1
   flutter_local_notifications: ^9.5.3
-  provider: ^5.0.0
+  provider: ^6.0.2  #^5.0.0
+  uuid: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
