--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   flutter_local_notifications: ^9.5.3
   provider: ^6.0.2  #^5.0.0
   uuid: ^3.0.6
+  dio: ^4.0.0
+  json_annotation: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  json_serializable: ^4.1.3
+  build_runner: ^2.0.4
   
   flutter_lints: ^1.0.0
 
