--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^3.0.6
   dio: ^4.0.0
   json_annotation: ^4.0.1
+  google_fonts: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
