--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.12
+  firebase_database: ^9.0.4
   flutter:
     sdk: flutter
 
@@ -28,7 +30,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   carousel_slider: ^4.0.0
   shared_preferences: ^2.0.13
-  simple_animations: ^1.3.3
+  # simple_animations: ^1.3.3
   flutter_dropdown_alert: ^1.0.3
   # sffffff
   firebase_core: ^1.17.1
@@ -41,6 +43,11 @@ dependencies:
   dio: ^4.0.0
   json_annotation: ^4.0.1
   google_fonts: ^2.1.0
+
+  simple_animations: ^4.0.2
+  flutter_svg_provider:
+  font_awesome_flutter:
+  flare_flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
