--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.1.12
   firebase_database: ^9.0.4
+  lottie: ^1.3.0
   flutter:
     sdk: flutter
 
