--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,5 +76,9 @@ flutter:
       - assets/slider/
       - assets/svg/
       - assets/images/
-
+  fonts:
+    - family: Mulish
+      fonts:
+        - asset: assets/fonts/Mulish-Light.ttf
+        - asset: assets/fonts/Mulish-SemiBold.ttf
  
